# kryogenic

./: CMakeLists.txt  Design Document.h
Engine/: CMakeLists.txt  pch.hpp
Engine/Kryogenic/Base/: Application.cpp  Application.hpp  Entrypoint.hpp  Log.cpp  Log.hpp  Resource.cpp  Resource.hpp  Window.cpp  Window.hpp
Engine/Kryogenic/Common/: Ensure.hpp  Types.hpp
Engine/Kryogenic/Ecs/: ComponentSet.hpp  EcsRegistry.hpp  Entity.hpp  Registry.cpp  Registry.hpp  SparseSet.cpp  SparseSet.hpp
Engine/Kryogenic/Ecs/Components/: Sprite.hpp  Transform.hpp
Engine/Kryogenic/Graphics/: RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Sandbox/Kryogenic/: SandboxApplication.cpp  SandboxApplication.hpp
engine/: CMakeLists.txt  pch.hpp
engine/kryogenic/base/: application.cpp  application.hpp  entrypoint.hpp  log.cpp  log.hpp  singleton.hpp  window.cpp  window.hpp
engine/kryogenic/common/: types.hpp
engine/kryogenic/ecs/: entity.cpp  entity.hpp
sandbox/: CMakeLists.txt
sandbox/kryogenic/: sandbox_application.cpp  sandbox_application.hpp
